--- a/Teste de Cadastro de Usuario/src/br/edu/ifro/CadastroUsuario.fxml
+++ b/Teste de Cadastro de Usuario/src/br/edu/ifro/CadastroUsuario.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
@@ -10,8 +11,13 @@
    <children>
       <TextField fx:id="txtNome" layoutX="22.0" layoutY="45.0" prefHeight="25.0" prefWidth="276.0" promptText="Nome" />
       <TextField fx:id="txtApelido" layoutX="22.0" layoutY="84.0" prefHeight="25.0" prefWidth="276.0" promptText="Apelido" />
-      <Button fx:id="btnSalvar" layoutX="246.0" layoutY="131.0" mnemonicParsing="false" onAction="#salvar" text="Salvar" />
-      <Button fx:id="btnCancelar" layoutX="181.0" layoutY="131.0" mnemonicParsing="false" onAction="#fechar" text="Cancelar" />
-      <Label layoutX="106.0" layoutY="9.0" text="Cadastro de Usuário" textAlignment="CENTER" />
+      <Button fx:id="btnSalvar" layoutX="22.0" layoutY="131.0" mnemonicParsing="false" onAction="#salvar" prefHeight="25.0" prefWidth="276.0" text="Salvar" />
+      <Button fx:id="btnCancelar" layoutX="22.0" layoutY="156.0" mnemonicParsing="false" onAction="#fechar" prefHeight="25.0" prefWidth="276.0" text="Cancelar" />
+      <Separator layoutX="22.0" layoutY="31.0" prefHeight="3.0" prefWidth="255.0" />
+      <Label layoutX="22.0" layoutY="14.0" text="CADASTRAR USUARIO" textAlignment="CENTER" textFill="#434343">
+         <font>
+            <Font name="Segoe UI Bold" size="12.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
